testing trinkets, fixing bugs & implementing missing functionality